--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -1,22 +1,19 @@
 <ion-header>
-  <ion-toolbar>
+  <ion-toolbar class="pokemon-toolbar">
     <ion-title>Pokémons</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content class="pokemon-background">
   <ion-grid>
     <ion-row>
       <ion-col size="6" *ngFor="let pokemon of pokemons">
-        <ion-card>
-          <img [src]="pokemon.sprites.front_default" alt="{{ pokemon.name }}" />
+        <ion-card class="pokemon-card">
+          <img class="pokemon-image" [src]="pokemon.sprites.front_default" alt="{{ pokemon.name }}" />
           <ion-card-header>
             <ion-card-title>{{ pokemon.name | titlecase }}</ion-card-title>
           </ion-card-header>
-          <ion-button
-            expand="full"
-            [routerLink]="['/details', pokemon.name]"
-          >
+          <ion-button class="pokemon-button" expand="full" [routerLink]="['/details', pokemon.name]">
             Ver detalhes
           </ion-button>
         </ion-card>
@@ -24,5 +21,5 @@
     </ion-row>
   </ion-grid>
 
-  <ion-button expand="block" (click)="loadMore()">Carregar mais</ion-button>
+  <ion-button class="load-more-button" expand="block" (click)="loadMore()">Carregar mais</ion-button>
 </ion-content>
