feat: primorar os detalhes do Pokémon e o layout da página inicial com estilo e exibição de informações aprimorados

--- a/src/app/pages/details/details.page.html
+++ b/src/app/pages/details/details.page.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-toolbar>
+  <ion-toolbar class="pokemon-toolbar">
     <ion-buttons slot="start">
       <ion-back-button defaultHref="/home"></ion-back-button>
     </ion-buttons>
@@ -7,48 +7,46 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content *ngIf="!isLoading">
-  <ion-card>
-    <img [src]="pokemon.sprites.front_default" alt="{{ pokemon.name }}" />
+<ion-content *ngIf="!isLoading" class="pokemon-background">
+  <ion-card class="pokemon-card pokemon-detail-card">
+    <div class="pokemon-detail-image-wrapper">
+      <img [src]="pokemon.sprites.front_default" alt="{{ pokemon.name }}" class="pokemon-image large" />
+    </div>
+
     <ion-card-header>
-      <ion-card-title>{{ pokemon.name | titlecase }}</ion-card-title>
+      <ion-card-title class="pokemon-name-title">
+        {{ pokemon.name | titlecase }} <span class="pokemon-id">#{{ pokemon.id }}</span>
+      </ion-card-title>
     </ion-card-header>
 
     <ion-card-content>
-      <ion-list>
-        <ion-item>
-          <ion-label><strong>ID:</strong></ion-label>
-          <ion-text>{{ pokemon.id }}</ion-text>
+      <div class="info-section-title">Informações</div>
+      <ion-list class="pokemon-info-list">
+        <ion-item *ngFor="let info of basicInfo">
+          <ion-label><strong>{{ info.label }}</strong></ion-label>
+          <ion-text [innerHTML]="info.value"></ion-text>
         </ion-item>
-        <ion-item>
-          <ion-label><strong>Altura:</strong></ion-label>
-          <ion-text>{{ pokemon.height / 10 }} m</ion-text>
+      </ion-list>
+
+      <div class="info-section-title">Habilidades</div>
+      <ion-list class="pokemon-info-list">
+        <ion-item *ngFor="let skill of skillsInfo">
+          <ion-label><strong>{{ skill.label }}</strong></ion-label>
+          <ion-text [innerHTML]="skill.value"></ion-text>
         </ion-item>
-        <ion-item>
-          <ion-label><strong>Peso:</strong></ion-label>
-          <ion-text>{{ pokemon.weight / 10 }} kg</ion-text>
-        </ion-item>
-        <ion-item>
-          <ion-label><strong>Tipos:</strong></ion-label>
-          <ion-text>{{ typeNames }}</ion-text>
-        </ion-item>
-        <ion-item>
-          <ion-label><strong>Habilidades:</strong></ion-label>
-          <ion-text>{{ abilityNames }}</ion-text>
-        </ion-item>
-        <ion-item>
-          <ion-label><strong>Experiência Base:</strong></ion-label>
-          <ion-text>{{ pokemon.base_experience }}</ion-text>
-        </ion-item>
-        <ion-item>
-          <ion-label><strong>Stats:</strong></ion-label>
-          <ion-text>{{ statsFormatted }}</ion-text>
+      </ion-list>
+
+      <div class="info-section-title">Estatísticas</div>
+      <ion-list class="pokemon-info-list">
+        <ion-item *ngFor="let stat of statsInfo">
+          <ion-label><strong>{{ stat.label }}</strong></ion-label>
+          <ion-text>{{ stat.value }}</ion-text>
         </ion-item>
       </ion-list>
     </ion-card-content>
   </ion-card>
 </ion-content>
 
-<ion-content *ngIf="isLoading">
+<ion-content *ngIf="isLoading" class="pokemon-background">
   <ion-spinner name="crescent" class="ion-margin"></ion-spinner>
 </ion-content>
