feat: implementar funcionalidade de favoritar Pokemons com armazenamento na localStorage

--- a/src/app/pages/details/details.page.html
+++ b/src/app/pages/details/details.page.html
@@ -11,6 +11,11 @@
   <ion-card class="pokemon-card pokemon-detail-card">
     <div class="pokemon-detail-image-wrapper">
       <img [src]="pokemon.sprites.front_default" alt="{{ pokemon.name }}" class="pokemon-image large" />
+      <ion-button expand="block" color="warning" (click)="toggleFavorite()">
+        <ion-icon [name]="isFavorite ? 'star' : 'star-outline'" slot="start"></ion-icon>
+        {{ isFavorite ? 'Remover dos Favoritos' : 'Adicionar aos Favoritos' }}
+      </ion-button>
+
     </div>
 
     <ion-card-header>
