feat: implementa funcionalidade de busca para Pokémons com filtragem local e melhora a lógica de carregamento de Pokémon para melhor performace

--- a/src/app/pages/details/details.page.scss
+++ b/src/app/pages/details/details.page.scss
@@ -71,7 +71,7 @@
 .pokemon-info-list {
   font-family: 'Courier New', monospace;
   color: #333;
-  background-color: #f8f8f8;
+  background-color: #ffdedeb0;
   border-radius: 8px;
   margin: 8px 0;
 }
