--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -7,6 +7,10 @@
       </ion-button>
     </ion-buttons>
   </ion-toolbar>
+  <ion-toolbar>
+    <ion-searchbar [(ngModel)]="searchTerm" (ionInput)="onSearch()" placeholder="Buscar Pokémon" debounce="200">
+    </ion-searchbar>
+  </ion-toolbar>
 </ion-header>
 
 <ion-content class="pokemon-background">
@@ -14,10 +18,10 @@
     <ion-row>
       <ion-col size="12" size-md="6" size-lg="4" *ngFor="let pokemon of pokemons">
         <ion-card class="pokemon-card type-{{ pokemon.types[0].type.name }}">
-          <ion-button class="favorite-toggle" fill="clear" size="small"
-            (click)="toggleFavorite(pokemon.name, $event); $event.stopPropagation()">
+          <ion-button class="favorite-toggle" fill="clear" size="small" (click)="toggleFavorite(pokemon.name, $event)">
             <ion-icon [name]="isFavorite(pokemon.name) ? 'star' : 'star-outline'" slot="icon-only"></ion-icon>
           </ion-button>
+
           <div class="pokemon-id">#{{ pokemon.id | number: '3.0' }}</div>
 
           <img class="pokemon-image type-{{ pokemon.types[0].type.name }}" [src]="pokemon.sprites.front_default"
@@ -27,12 +31,10 @@
 
           <div class="pokemon-card-info">
             <div class="pokemon-attribute">
-              <strong>Peso</strong>
-              {{ pokemon.weight / 10 }} kg
+              <strong>Peso</strong> {{ pokemon.weight / 10 }} kg
             </div>
             <div class="pokemon-attribute">
-              <strong>Altura</strong>
-              {{ pokemon.height / 10 }} m
+              <strong>Altura</strong> {{ pokemon.height / 10 }} m
             </div>
             <div class="pokemon-attribute">
               <strong>Tipo</strong>
@@ -47,13 +49,12 @@
               <ion-label>Detalhes</ion-label>
             </ion-button>
           </div>
-
         </ion-card>
       </ion-col>
     </ion-row>
   </ion-grid>
 
-  <ion-button class="load-more-button" expand="block" (click)="loadMore()">
+  <ion-button class="load-more-button" expand="block" (click)="loadMore()" *ngIf="!isSearching">
     Carregar mais
   </ion-button>
 </ion-content>
