--- a/src/app/pages/details/details.page.html
+++ b/src/app/pages/details/details.page.html
@@ -30,12 +30,13 @@
       <div class="evolution-chain-wrapper" *ngIf="evolutionChain && evolutionChain.length > 0">
         <div class="evolution-container">
           <ng-container *ngFor="let evo of evolutionChain; let last = last">
-            <ion-button fill="clear" class="evolution-stage-button" [routerLink]="['/details', evo.name]">
+            <ion-button fill="clear" class="evolution-stage-button" (click)="loadFromEvolution(evo.name)">
               <div class="evolution-stage">
                 <img [src]="evo.image" [alt]="evo.name" class="evolution-image" />
                 <div class="evolution-name">{{ evo.name | titlecase }}</div>
               </div>
             </ion-button>
+
 
             <ion-icon *ngIf="!last" name="arrow-forward-outline" class="evolution-arrow"></ion-icon>
           </ng-container>
